<resources>
    <string name="app_name">TeamRenaissance</string>
    <string name="home">Accueil</string>
    <string name="borrow">Emprunter</string>
    <string name="myloans">Mes Prêts</string>
    <string name="profil">Profil</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login -->
    <string name="loginPlaceholder">Login</string>
    <string name="pwPlaceholder">Password</string>
    <string name="signInButton">Sign in</string>
    <!-- Sign up -->
    <string name="pseudoPlaceholder">Pseudo</string>
    <string name="lastNamePlaceholder">Nom</string>
    <string name="firstNamePlaceholder">Prénom</string>
    <string name="emailPlaceholder">E-mail</string>
    <string name="newPasswordPlaceholder">Nouveau mot de passe</string>
    <string name="confirmPlaceholder">Confirmer</string>
    <string name="currentPasswordPlaceholder">Mot de passe actuel</string>
    <string name="signUpButton">S\'inscrire</string>
    <!-- Logout-->
    <string name="logoutItem">Déconnexion</string>
    <!-- Profil edit-->
    <string name="dciPlaceholder">DCI</string>
    <string name="phonePlaceholder">Téléphone</string>
    <string name="addressPlaceholder">Adresse</string>
    <string name="zipcodePlaceholder">Code Postal</string>
    <string name="cityPlaceholder">Ville</string>
    <string name="fbPlaceholder">Facebook</string>
    <string name="twPlaceholder">Twitter</string>
    <string name="avatarPlaceholder">Avatar</string>
    <string name="valideButton">Valider changements</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirmPassword">The password and the confirmation are differents</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sing_up">Sign up</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to Emprunter -->
    <string name="error_empty_quantity">Quantity is invalid</string>
    <string name="error_empty_card">Card cannot be empty</string>
    <string name="error_empty_textarea">Cards cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
