<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.teamrenaissance.julien.teamrenaissance.Login">

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginPlaceholder"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwPlaceholder"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signInButton"/>

    <TextView
        android:id="@+id/loginTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

</android.widget.LinearLayout>
